<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/Principal_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/NOM1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/politesse1" />
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/NOM2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nom" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/PRENOM1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/politesse2" />
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/PRENOM2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Prenom" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/DATE1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/politesse3" />
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/DATE2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Date de naissance" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/VILLE1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/politesse4" />
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/VILLE2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Ville de naissance" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/departements" />
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/departements"
                android:prompt="@string/departements" />
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="addNumero"
                android:text="+" />
            <Button
                android:id="@+id/removeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="removeNumero"
                android:text="-" />
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/numeros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/numero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="numero"
                    android:visibility="invisible"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/VALIDATE1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="validateAction"
                android:text="@string/validate" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="clickAndroid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.473"
        app:srcCompat="@mipmap/ic_launcher_round" />
    <TextView
        android:id="@+id/un_texto"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="" />

    <!--
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linea1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:text="Nom"
            android:textAlignment="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="Rosales" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linea2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linea1"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:text="Prénom"
            android:textAlignment="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="Bryan" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linea3"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linea2"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:text="Date de naissance"
            android:textAlignment="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="09/01/1995" />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linea4"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/linea3"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_vertical"
            android:text="Ville de naissance"
            android:textAlignment="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="Guayaquil" />
    </LinearLayout>

    -->


</android.support.constraint.ConstraintLayout>